make fork jvm args additive